start learning journey to html

--- a/HTML/ol - ul.html
+++ b/HTML/ol - ul.html
@@ -27,7 +27,11 @@
     </ul>
 
     <!-- Use different Type -->
-
+    <!-- type:
+    1️⃣ A(upercase)
+    2️⃣ a(lowercase)
+    3️⃣ I(upercase roman)
+    4️⃣ i(lowercase roman) -->
     <!-- lower-case like : a -->
     <h2><mark> lower-case</mark></h2>
     <ol type="a">
@@ -63,5 +67,28 @@
         <li>Banana🍌</li>
         <li>Apple🍎</li>
     </ol>
+
+    <!-- unordered list -->
+    <!-- types: 
+    1️⃣ disc
+    2️⃣ circle
+    3️⃣ square
+    4️⃣ none -->
+    <h2><mark> Unordered - list - Type</mark></h2>
+    <ul type="square">
+        <li>Mango🥭</li>
+    </ul>
+
+    <ul type="circle">
+        <li>Orange🍊</li>
+    </ul>
+
+    <ul type="disc">
+        <li>Banana🍌</li>
+    </ul>
+
+    <ul type="none">
+        <li>Apple🍎</li>
+    </ul>
 </body>
 </html>
