start learning journey to html

--- a/HTML/html5 form element.html
+++ b/HTML/html5 form element.html
@@ -72,6 +72,21 @@
             </label>
             <br>
             <br>
+            <label for="Month">Month:
+                <input type="month" name="Month">
+            </label>
+            <br>
+            <br>
+            <label for="Week">Week:
+                <input type="week" name="week">
+            </label>
+            <br>
+            <br>
+            <label for="Range">Range:
+                <input type="range" name="Range">
+            </label>
+            <br>
+            <br>
             <input type="submit" value="Submit">
            
         </fieldset>
