--- a/CSS/position-fixed&Stickey.html
+++ b/CSS/position-fixed&Stickey.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Position Fixed and Sticky😊👈</title>
     <style>
+        .header{
+            width: 100%;
+            height: 50px;
+            background-color: black;
+            color: aliceblue;
+            font-size: 25PX;
+            text-align: center;
+            position: sticky;
+            top: 5PX;
+        }
         .text{
             font-size: 30px;
         }
@@ -39,12 +49,16 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        Home | About | Contact | MEN | WOMEN
+    </div>
     <h2>Position Fixed and Sticky😊👈</h2>
     <div>
     <div class="box-1"><h1>1</h1></div>
     <div class="box-2"><h1>2</h1></div>
     <div class="box-3"><h1>3</h1></div>
     </div>
+   
     <div style="clear: both;" ></div>
     <div class="text">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, unde doloribus? Vero animi nisi, iusto maiores explicabo ea incidunt quam quasi sed sit, cupiditate porro, quod iste dolor unde fuga.</p>
