--- a/CSS/Animation Cloud/index.html
+++ b/CSS/Animation Cloud/index.html
@@ -9,9 +9,17 @@
 <body>
     <h2>Moving Clouds☁️</h2>
     <div class="box">
-        <div class="sun">
-            
+        <div class="sun"></div>
+        <div class="cloud-1">
+            <img src="./cloud-1.png" alt="" srcset="" width="100%" height="100%">
         </div>
+        <div class="cloud-2">
+            <img src="./cloud-1.png" alt="" srcset="" width="100%" height="100%">
+        </div>
+        <div class="cloud-3">
+            <img src="./cloud-1.png" alt="" srcset="" width="100%" height="100%">
+        </div>
+        
     </div>
 </body>
 </html>
