--- a/java-Script/throw-js.html
+++ b/java-Script/throw-js.html
@@ -7,22 +7,28 @@
 </head>
 <body>
     Please enter the number 5 and 10.
-<input type="number" id="inp">
+<input type="text" id="inp">
 <button onclick="test()">Test</button>
+<h1 id="res"></h1>
 
 </body>
 <script>
-    var num = document.getElementById('inp').value
+    var num = document.getElementById('inp');
     function test(){
+        var data = num.value;
         try{
-            if(isNaN(num)){
+            if(isNaN(data)){
                 throw "This is not a number";
             }else{
-                if(num<5 && num>10){
+                if(data<5 || data>10){
                     throw "Number is out of range"
+                }else{
+                    throw " ";
                 }
             }
-            
+
+        }catch(rrorMessage){
+            document.getElementById('res').innerHTML =rrorMessage;
         }
     }
 </script>
